--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,13 @@
  <body>
    <h1>Create  a Basketball Team!</h1>
    <form method="post">
-     
+     <p><input type="text" name="team_name"></p>
+     <p><input type="text" name="coach"></p>
+     <p><input type="text" name="point_guard"></p>
+     <p><input type="text" name="shooting_guard"></p>
+     <p><input type="text" name="small_forward"></p>
+     <p>Power Forward: <input type="text" name="power_forward"></p>
+     <p>Center: <input type="text" name="center"></p>
    </form>
  </body>
 </html>
