--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -14,7 +14,7 @@
      <p>Small Forward: <input type="text" name="small_forward"></p>
      <p>Power Forward: <input type="text" name="power_forward"></p>
      <p>Center: <input type="text" name="center"></p>
-     <input id="submit" type="submit">
+     <input id="Submit" type="submit">
    </form>
  </body>
 </html>
