Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -7,7 +7,12 @@
  <body>
  
     <h1><%= @tn %></h1>
-    <h2><%= %></h2>
+    <h2><%= @coach %></h2>
+    <h2><%= @pg %></h2>
+    <h2><%= @sg %></h2>
+    <h2><%= @sf %></h2>
+    <h2><%= @pf %></h2>
+    <h2><%= @center %></h2>
 
  </body>
 </html>
