--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
  
-    <h1><% @tn %></h1>
+    <h1><% @name %></h1>
     <h2><% @coach %></h2>
     <h2><% @pg %></h2>
     <h2><% @sg %></h2>
