--- a/views/team.erb
+++ b/views/team.erb
@@ -6,13 +6,13 @@
  </head>
  <body>
  
-    <h1><% @name %></h1>
-    <h2><% @coach %></h2>
-    <h2><% @pg %></h2>
-    <h2><% @sg %></h2>
-    <h2><% @sf %></h2>
-    <h2><% @pf %></h2>
-    <h2><% @center %></h2>
+    <h1><%= @name %></h1>
+    <h2><%= @coach %></h2>
+    <h2><%= @pg %></h2>
+    <h2><%= @sg %></h2>
+    <h2><%= @sf %></h2>
+    <h2><%= @pf %></h2>
+    <h2><%= @center %></h2>
 
  </body>
 </html>
